git/portfolio/e: Fix skill tab overlap issue on mobile devices [DEBUG]

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1636,7 +1636,8 @@ canvas {
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-bottom: 2px;
+  margin-top: 1px;
+  margin-bottom: 1px;
   font-family: "Roboto", sans-serif;
 }
 
